--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML-Essentials-HomeTask</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="saas/style.css">
     <script src="http://kit.fontawesome.com/7e5b2d153f.js" 
     crossorigin="anonymous">
     </script>
